@@ -1,3 +1,8 @@
+2006-03-15  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
+
+	PR c++/6634
+	g++.dg/parse/long1.C: New test.
+
 2006-03-14  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
 	PR fortran/19101
